--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no,maximum-scale=1.0">
   <title>ITMD-361 Fundaments of Web Development</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +18,7 @@
         <li><a href="foodiespot.html">Foodie Spot!!</a></li>
         <li><a href="index.html">Cover Letter</a></li>
       </ul>
-    </nav>
+    </nav ="top_navigation">
   </header>
   <main>
   <section>
