--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
   <main>
   <section>
-    <h1>My Cover letter</h1> <img src="media/coverletter.jpg" alt="cover letter">
+    <h1>My Cover letter</h1> <img src="im/coverletter.jpg" alt="cover letter">
 	</section>
 	<section>
     <p> Hey, I am Rabia Ahmed. I,ve uploaded the cover letter here on my Website. Hope you like it. </p>
