--- a/index.html
+++ b/index.html
@@ -1,58 +1,73 @@
-<!DOCTYPE html>
+<!Doctype html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>Cover Letter</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic" rel="stylesheet">
+  <title>Resume</title>
 </head>
 
 <body>
   <header>
-    <nav class="top_navigation">
+    <nav>
       <ul>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="foodiespot.html">Foodie Spot!!</a></li>
-        <li><a href="index.html">Cover Letter</a></li>
+        <li><a href="index.html">Resume</a></li>
+        <li><a href="aboutme.html">About</a></li>
+        <li><a href="traveling.html">Traveling</a></li>
       </ul>
     </nav>
   </header>
-  <main>
-  <section>
-    <h1>My Cover letter</h1> <img src="im/coverletter.jpg" alt="cover letter">
-	</section>
-	<section>
-    <p> Hey, I am Rabia Ahmed. I,ve uploaded the cover letter here on my Website. Hope you like it. </p>
-    <p> After a year of working directly with Brain Brick LLC, I seek to leverage my experience in Cyber Security within the field of analyst and Penetration at the superior level. I also studied for my associate's degree (2 years) in Information Technology. As a student, I studied several courses that helped me understand the value of Cyber Security for smart and efficient Information Technology analyst, but the area that attracted me the most was cyber security because I believe it is the stepping stone to prevent red hackers and in turn securing a network. For this reason, I was excited to learn more, and I'm determined to enhance my skills under you organization. </p>
-    <p> I believe that I would very much like to be considered as a strong candidate. As I was strongly intrigued by advances in technology ever since I was little, I've been more; It doesn't matter if it's a new device, gadget or a different machine, the question I asked myself was how it works and what else could be done to improve it. To answer these questions, I began dismantling devices that I could get my hands on. </p>
-    <p> During my studies, I discovered various platforms with which I utilized to do various tasks and projects. I've completed many tasks CTFs on the Hackerone and Tryhackme, such as Mr. Robot CTF, Basic Penetesting, DVWA, OWASP TOP 10, OWASP Juice Shop, Wonderland, Linux Fundamentals, Overpass, Overpass2- Hacked, Overpass3- Hosting, Nmap, Crack the hash. </p>
-    <p> Much of my experience during one of my internships, I was responsible for scanning a device that find bugs or problems. This penetration was used to find the problem and provide solution or control method to check whether the website is secured and working in the desired range or not. </p>
-    <p> To pursue my goals further, I have found your organization to be the most suitable for enhancing my skills. The firm has proven to be a point of reference for aspiring candidates by specializing in and contributing to Cyber Security, and technology in recent years. I believe that working in this firm will give me a perfect opportunity to continue my work in a very supportive environment that would not be possible elsewhere. </p>
-    <p> My academic and professional experience has given me enough experience to explore various technical paths. To understand the big picture and improve my technical skills and competencies, I need a good curriculum that guides me and enables me to contribute significantly. I've done the research, and I think there are many opportunities for IT graduates, especially when you think of a cybersecurity analyst. I also like to travel and explore different cultures. In this ever-changing market, you need to consider how material selection gives you multiple options to explore. </p>
-    <p> For your convenience, I have uploaded my resume in the previous page for your review. Realizing the limitations of the written page, I would welcome the opportunity to participate in a personal interview to answer any of your questions and better present my qualifications. Thank you for your time and consideration I look forward to speaking with you soon. </p>
-    <p> Sincerely, </p>
-    <p> Rabia Sajjad Ahmed </p>
+  <div>
+    <h1>Nadia Sajjad Ahmed</h1>
+    <h3>Cyder Security Consultant</h3>
+    <p>Phone: +1 (773) 797-2521 | Email: nadiaahmed99@outlook.com</p>
+    <h2><u>Experience</u></h2>
+    <h3><u>Brain Brick LLC, Joliet, IL</u></h3>
+    <p>Role: Cyber Security Engineer</p>
+    <p>2020-2021</p>
     <ul>
-      <li>Rabia Ahmed</li>
-      <li>ITMD-361</li>
-      <li>Project1</li>
-      <li> Illinois Institute of Technology (IIT)</li>
+      <li>Provide security oversight for Confidential and subordinate commands. Coordinating Confidential security measures including analysis, periodic testing, evaluation, verification, accreditation, and review of information system installations.</li>
+      <li>Provide oversight of Plan of Action and Milestone (POA&M) compliance- POA&M management, mitigation statement formulation, interfacing with system administrators to resolve open findings of high and at-risk systems.</li>
+      <li>Ensure information ownership responsibilities are established for each Confidential information system, to include accountability, access approvals, and special handling requirements.</li>
+      <li>Coordinate security measures to include analysis, periodic testing, evaluation, verification, incident response/incident handler and review of information system installation at the appropriate classification level within the command or organizational network structure.</li>
+      <li>Provides oversight and compliance reporting for the Information Assurance Vulnerability Management (IAVM) program.</li>
+      <li>Develop and maintain the necessary technical documentation and standard operating procedures (SOPs).</li>
     </ul>
-    <p> I hope you like my website Thankyou all for reading this. Have a Great day! </p>
-	</section>
-	<section>
-    <footer>
-      <p>Website created by Rabia Sajjad Ahmed</p>
-      <address>
-        <p><a href="mailto:rahmed16@hawk.iit.edu">rahmed16@hawk.iit.edu</a></p>
-      </address>
-    </footer>
-	</section>
-	<section>
-  </main>
+    <h3><u>Institute of Southern Punjab</u></h3>
+    <p>Part-Time (Internship)</P>
+    <p>2019</p>
+    <p>Web Development and web penetration testing of the Company.</p>
+    <h2><u>Education</u></h2>
+    <h3>Illinois Institue of Technology</h3>
+    <p>Present</p>
+    <p>ITM (Information Technology Management)</p>
+    <h3>Cyber Security, CEH (Certified Ethical Hacking by EC – Council)</h3>
+    <p>2020</p>
+    <p>Specialization in Cyber Security</p>
+    <p>Learnt about cybersecurity and did alot of practice.</p>
+    <h3>Institute of Southern Punjab </h3>
+    <p>2018-2020</p>
+    <p>Information Technology ADP-IT </p>
+    <p>Specialization in Information with various merit certificates in specialization and general courses</p>
+    <h3>Educations and Skills Development Council</h3>
+    <p>2017-2018</p>
+    <p>Web Designing and development</p>
+    <p>Diploma in Web Designing and Development</p>
+    <h2><u>Certificates</u></h2>
+    <ul>
+      <li>CEH Training Certificate</li>
+      <li>Intro to IoT</li>
+      <li>Emerging Technologies Workshop: Network Programmability with Cisco APIC-EM</li>
+      <li>Packet tracer Know How 1: Packet Tracer 101</li>
+      <li>NDG Linux Unhatched Course</li>
+    </ul>
+    <h2><u>Skills & Abilities</u></h2>
+    <ul>
+      <li>Confident</li>
+      <li>Hard-working and Self-motivation, willing to learn</li>
+      <li>Adaptability</li>
+      <li>Time Management</li>
+    </ul>
+  </div>
 </body>
 
 </html>
