--- a/traveling.html
+++ b/traveling.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Traveling</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <nav>
+    <nav class="top_navigation">
       <ul>
         <li><a href="index.html">Resume</a></li>
         <li><a href="aboutme.html">About</a></li>
@@ -16,9 +18,12 @@
       </ul>
     </nav>
   </header>
-  <div>
+  <main>
+    <section>
     <h1><u>Traveling</u></h1>
     <p>Okay so this page is all about traveling! If you love to travel, you can relate to me.</p>
+      </section>
+    <section>
     <h2>Places I've Been To</h2>
     <p>There are so many places I want to go to and I will one day but here are some I've traveled to:</p>
     <ul>
@@ -36,7 +41,9 @@
     <p> Traveling is not only for buying plane tickets but also for road trips, long drives, and much more. I remember earlier this year, I traveled to Ohio from Chicago, I was so excited about my road trip and enjoyed every bit of it. Even though I had to go to some other place in Chicago the next day but I didn't wanted to miss this road trip too. So yeah, I forgot everything and went like this moment won't come again in my life. I got tired but it was worth it.</p> <img src="images/ohio.jpg" alt="Ohio">
     <p>“The journey of a thousand miles begins with a single step."</p> <img src="images/ohiosky.jpg" alt="View">
     <p>I hope this explains everything. Have safe traveling. Bye!</p>
-  </div>
+      </section>
+    </section>
+  </main>
 </body>
 
 </html>
