--- a/aboutme.html
+++ b/aboutme.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>About</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <nav>
+    <nav class="top_navigation">
       <ul>
         <li><a href="index.html">Resume</a></li>
         <li><a href="aboutme.html">About</a></li>
