--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>About</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
 </head>
 
 <body>
